WVFIS-340: 20pt spacing on left, right and bottom for all pages Fixed

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -152,13 +152,13 @@ body[data-device="web"] {
 }
 
 .Container {
-  padding: 20px 15px;
+  padding: 20px 20px;
   /* margin-bottom: 60px;
   padding-bottom: 20px !important;  */
   background-color: #fff;
   overflow-y: scroll;
   // margin-bottom: 56px !important;
-  height: 100%;
+  height: 74vh;
   padding-bottom: 56px !important;
 }
 
